test/extra/negative/cycle.net
INPUT a
OUTPUT r
VAR a, b, c, r
IN
b = AND d a
c = AND a b
d = AND c b

